force-app/main/default/objects/Strategic_Objective__c/Strategic_Objective__c.object-meta.xml
<CustomObject>
    <description>RUBX-464: Vision/Value framework data capture</description>
    <label>Strategic Objective</label>
    <nameField>
        <displayFormat>SO-{000000}</displayFormat>
        <label>Strategic Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>