force-app/main/default/objects/Strategic_Objective__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>RUBX-464: Vision/Value framework - Master-Detail relationship to the Opportunity object</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Strategic Objectives</relationshipLabel>
    <relationshipName>Strategic_Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>