force-app/main/default/objects/Strategic_Objective__c/fields/Strategic_Objective__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective__c</fullName>
    <description>RUBX-464: Vision/Value framework</description>
    <label>Strategic Objective</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Value_Driver__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grow interest income</fullName>
            </value>
            <value>
                <fullName>Grow non-interest income</fullName>
            </value>
            <value>
                <fullName>Grow deposits</fullName>
            </value>
            <value>
                <fullName>Improve customer retention</fullName>
            </value>
            <value>
                <fullName>Increase new customer acquisition</fullName>
            </value>
            <value>
                <fullName>Increase customer share of wallet</fullName>
            </value>
            <value>
                <fullName>Increase cross-sell rate</fullName>
            </value>
            <value>
                <fullName>Improve speed to market with new offerings</fullName>
            </value>
            <value>
                <fullName>Enter new lines of business, geographies and/or verticals</fullName>
            </value>
            <value>
                <fullName>Improve client customers’ journey</fullName>
            </value>
            <value>
                <fullName>Improve capital allocation</fullName>
            </value>
            <value>
                <fullName>Grow complex lending deals</fullName>
            </value>
            <value>
                <fullName>Grow line of business revenue (payments, treasury, etc.)</fullName>
            </value>
            <value>
                <fullName>Increase fee income</fullName>
            </value>
            <value>
                <fullName>Increase operational efficiency / employee productivity</fullName>
            </value>
            <value>
                <fullName>Reduce IT costs (labor-related)</fullName>
            </value>
            <value>
                <fullName>Reduce call center costs (labor-related)</fullName>
            </value>
            <value>
                <fullName>Avoid hiring additional staff</fullName>
            </value>
            <value>
                <fullName>Improve STP rates or SLA</fullName>
            </value>
            <value>
                <fullName>Reduce IT costs (non-labor such as interfaces, maintenance, licenses)</fullName>
            </value>
            <value>
                <fullName>Reduce dependency on external vendors (3rd party costs)</fullName>
            </value>
            <value>
                <fullName>Reduce internal development costs</fullName>
            </value>
            <value>
                <fullName>Reduce hardware costs</fullName>
            </value>
            <value>
                <fullName>Avoid cost to update, upgrade existing solutions / platform</fullName>
            </value>
            <value>
                <fullName>Reduce paper, printing, and/or courier costs (administrative costs)</fullName>
            </value>
            <value>
                <fullName>Reduce branch costs (close branches, open advisory branches, increase self-service)</fullName>
            </value>
            <value>
                <fullName>Move to cloud (TCO)</fullName>
            </value>
            <value>
                <fullName>Reduce operational risk (error rates)</fullName>
            </value>
            <value>
                <fullName>Reduce regulatory risk (risk of non-compliance)</fullName>
            </value>
            <value>
                <fullName>Reduce risk of default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>