force-app/main/default/objects/Strategic_Objective__c/fields/Value_Driver__c.field-meta.xml
<CustomField>
    <fullName>Value_Driver__c</fullName>
    <description>RUBX-464: Vision/Value framework</description>
    <label>Value Driver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increase Revenue</fullName>
            </value>
            <value>
                <fullName>Improve Efficiency</fullName>
            </value>
            <value>
                <fullName>Save Costs</fullName>
            </value>
            <value>
                <fullName>Reduce Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>